Fix overlap in recipe list on small devices

--- a/static/style.css
+++ b/static/style.css
@@ -73,8 +73,8 @@ img[alt="XMR Logo"] {
 
 @media (pointer: coarse) {
 	li > a {
-	    display: block;
-		height: 1.5rem
+	    display: inline-block;
+		padding: 0.2em 0;
 	}
 }
 
